manifests/atlantis/atlantis-webhook-route/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  namespace: "kubenuts"
  name: "atlantis-webhook"
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: 4141
  selector:
    release: "atlantis"
    app: "atlantis"
